--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-pager-view": "5.4.24"
+    "react-native-pager-view": "5.4.24",
+    "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
