--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^3.4.6"
   },
   "private": true
 }
